--- a/app/src/main/res/layout/smog.xml
+++ b/app/src/main/res/layout/smog.xml
@@ -35,11 +35,12 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="373dp"
-        android:layout_height="72dp"
+        android:layout_height="514dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
 
+        android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
