--- a/app/src/main/res/layout/run.xml
+++ b/app/src/main/res/layout/run.xml
@@ -22,6 +22,15 @@
         app:layout_constraintStart_toStartOf="parent">
 
 
+        <Spinner
+            android:id="@+id/activitySpinner"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@+id/endButton"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="0dp" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -35,7 +44,7 @@
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="0dp"
             android:text="Start" />
 
@@ -45,7 +54,7 @@
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="77dp"
+            android:layout_marginEnd="170dp"
             android:layout_marginBottom="0dp"
             android:text="End" />
     </RelativeLayout>
