--- a/app/src/main/res/layout/run.xml
+++ b/app/src/main/res/layout/run.xml
@@ -15,5 +15,99 @@
                 android:layout_height="match_parent"
                 android:id="@+id/user_map" />
 
+    <RelativeLayout
+        android:id="@+id/walkOrRunLayout"
+        android:layout_width="300dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="0dp"
+            android:layout_marginBottom="0dp"
+            app:srcCompat="@color/common_google_signin_btn_text_dark_default" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Choose type of Activity:" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView2"
+
+            android:tint="@color/colorPrimary"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="14dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="55dp"
+
+            android:layout_marginBottom="53dp"
+            android:theme="@style/SwitchStyle"/>
+
+        <Button
+            android:id="@+id/GoButton"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="1dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:text="GO!" />
+
+        <Button
+            android:id="@+id/startPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="36dp"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/endPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="0dp"
+            android:text="End" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="40dp"
+            android:text="Cycle" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="40dp"
+            android:text="Run" />
+    </RelativeLayout>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
