--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -5,7 +5,7 @@
     android:theme="@style/Theme.AppCompat.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nosmogrunner.WelcomeActivity"
+    tools:context="com.example.nosmogrunner.Activities.WelcomeActivity"
     android:orientation="vertical"
     android:background="@color/gray">
 
