--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    tools:context="com.example.nosmogrunner.MainMenuActivity"
+    tools:context="com.example.nosmogrunner.Activities.MainMenuActivity"
     >
 
     <ImageButton
