--- a/app/src/main/res/layout/smog.xml
+++ b/app/src/main/res/layout/smog.xml
@@ -5,7 +5,7 @@
     android:id="@+id/smog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nosmogrunner.SmogActivity">
+    tools:context="com.example.nosmogrunner.Activities.SmogActivity">
 
     <Button
         android:id="@+id/button"
