--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightorangedark">#ebd6ab</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="blue">#42A5F5</color>
 </resources>
