--- a/app/src/main/res/layout/run.xml
+++ b/app/src/main/res/layout/run.xml
@@ -41,6 +41,179 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="0dp"
                 app:srcCompat="@drawable/ic_refresh" />
+
+            <RelativeLayout
+                android:id="@+id/statsLayout"
+                android:layout_width="221dp"
+                android:layout_height="119dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="2dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:text="Route smog measurements:" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView3"
+                    android:layout_alignBottom="@+id/startPoint"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginEnd="-31dp"
+                    android:layout_toStartOf="@+id/textView3"
+                    android:text="PM 1" />
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/textView5"
+                    android:layout_alignBottom="@+id/startPoint"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="PM 10" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+
+                    android:layout_alignTop="@+id/textView6"
+                    android:layout_alignEnd="@+id/textView3"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="PM 2.5" />
+
+                <TextView
+                    android:id="@+id/pm1RouteValue"
+                    android:layout_width="49dp"
+                    android:layout_height="27dp"
+                    android:layout_alignStart="@+id/PM1RunProgressBar"
+                    android:layout_alignTop="@id/PM1RunProgressBar"
+                    android:layout_alignEnd="@id/PM1RunProgressBar"
+                    android:layout_alignBottom="@id/PM1RunProgressBar"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:selectAllOnFocus="false"
+                    android:textAlignment="center"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/pm10RouteValue"
+                    android:layout_width="49dp"
+                    android:layout_height="27dp"
+
+                    android:layout_below="@+id/textView6"
+                    android:layout_alignStart="@id/PM10RunProgressBar"
+                    android:layout_alignTop="@id/PM10RunProgressBar"
+                    android:layout_alignEnd="@id/PM10RunProgressBar"
+                    android:layout_alignBottom="@id/PM10RunProgressBar"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:selectAllOnFocus="false"
+                    android:textAlignment="center"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/pm25RouteValue"
+                    android:layout_width="49dp"
+                    android:layout_height="27dp"
+                    android:layout_below="@+id/textView7"
+
+                    android:layout_alignStart="@id/PM25RunProgressBar"
+                    android:layout_alignTop="@id/PM25RunProgressBar"
+                    android:layout_alignEnd="@id/PM25RunProgressBar"
+                    android:layout_alignBottom="@id/PM25RunProgressBar"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="0dp"
+
+                    android:ems="10"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:selectAllOnFocus="false"
+                    android:textAlignment="center"
+                    android:textSize="13sp" />
+
+
+                <ProgressBar
+                    android:id="@+id/PM1RunProgressBar"
+
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/textView5"
+                    android:layout_alignStart="@+id/textView5"
+                    android:layout_marginStart="-9dp"
+                    android:layout_marginTop="10dp"
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:max="100"
+                    android:min="0"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:progressDrawable="@drawable/progress"
+                    />
+
+                <ProgressBar
+                    android:id="@+id/PM10RunProgressBar"
+
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/textView6"
+                    android:layout_alignStart="@+id/textView6"
+                    android:layout_marginStart="-6dp"
+                    android:layout_marginTop="10dp"
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:max="100"
+                    android:min="0"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:progressDrawable="@drawable/progress"
+                    />
+
+                <ProgressBar
+                    android:id="@+id/PM25RunProgressBar"
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/textView7"
+                    android:layout_alignStart="@+id/textView7"
+                    android:layout_alignEnd="@+id/textView3"
+                    android:layout_marginStart="-3dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="-3dp"
+                    android:max="100"
+                    android:min="0"
+                    android:progressDrawable="@drawable/progress"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                   />
+
+            </RelativeLayout>
         </RelativeLayout>
 
 
@@ -138,99 +311,7 @@
 
                 app:srcCompat="@drawable/ic_running_solid" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                android:text="Route smog measurements:" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView3"
-                android:layout_alignStart="@+id/textView3"
-                android:layout_alignBottom="@+id/startPoint"
-                android:layout_marginTop="10dp"
-                android:text="PM 1: " />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView5"
-                android:layout_alignBottom="@+id/startPoint"
-                android:layout_marginStart="23dp"
-                android:layout_marginTop="0dp"
-
-                android:layout_marginBottom="0dp"
-                android:layout_toEndOf="@+id/textView5"
-                android:text="PM 10:" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView5"
-                android:layout_alignBottom="@+id/startPoint"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="0dp"
-
-                android:layout_marginBottom="0dp"
-                android:layout_toEndOf="@+id/textView6"
-                android:text="PM 2.5:" />
-
-            <TextView
-                android:id="@+id/pm1RouteValue"
-                android:layout_width="49dp"
-                android:layout_height="27dp"
-
-                android:layout_below="@+id/textView5"
-                android:layout_alignStart="@+id/textView5"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="11dp"
-                android:ems="10"
-                android:inputType="number"
-                android:selectAllOnFocus="false"
-
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/pm10RouteValue"
-                android:layout_width="49dp"
-                android:layout_height="27dp"
-
-                android:layout_below="@+id/textView5"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_toEndOf="@+id/pm1RouteValue"
-                android:ems="10"
-                android:inputType="number"
-
-                android:selectAllOnFocus="false"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/pm25RouteValue"
-                android:layout_width="49dp"
-                android:layout_height="27dp"
-                android:layout_below="@+id/textView5"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="11dp"
-                android:layout_toEndOf="@+id/pm10RouteValue"
-                android:ems="10"
-                android:inputType="number"
-                android:selectAllOnFocus="false"
-
-
-                android:textAlignment="center"
-                android:textSize="20sp" />
 
         </RelativeLayout>
     </LinearLayout>
