--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
     <color name="blue">#42A5F5</color>
+    <color name="green">#447a29</color>
 </resources>
