Latest working version. Google Maps redirection working. Ui showing smog stats for each route is working too and is more robust than previous version. Few things can be improved but overall impression is very good.

--- a/app/src/main/res/drawable/progress.xml
+++ b/app/src/main/res/drawable/progress.xml
@@ -4,17 +4,19 @@
     android:innerRadiusRatio="3"
     android:thicknessRatio="8"
     android:useLevel="true"
+
     >
 
     <size
         android:width="76dip"
         android:height="76dip" />
 
-    <solid android:color="@color/green"/>
+
     <gradient
-    android:endColor="@color/green"
-    android:startColor="@color/colorAccent"
-    android:angle="0"
+
+    android:startColor="@color/bright_green"
+    android:endColor="@color/bright_red"
+    android:angle="180"
     />
 
 </shape>
