--- a/app/src/main/res/layout/run.xml
+++ b/app/src/main/res/layout/run.xml
@@ -27,8 +27,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/circularProgress"
+                android:progressDrawable="@drawable/circular_progress_bar"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+
+                />
             <ImageButton
                 android:id="@+id/refreshButton"
                 android:layout_width="wrap_content"
@@ -42,18 +53,21 @@
                 android:layout_marginBottom="0dp"
                 app:srcCompat="@drawable/ic_refresh" />
 
+
+
             <RelativeLayout
                 android:id="@+id/statsLayout"
                 android:layout_width="221dp"
-                android:layout_height="119dp"
+                android:layout_height="150dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginBottom="2dp"
-                android:background="@color/white">
+                android:background="@color/white"
+                >
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/statsTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -63,35 +77,35 @@
                     android:text="Route smog measurements:" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/pm1Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView3"
-                    android:layout_alignBottom="@+id/startPoint"
+                    android:layout_below="@+id/statsTitle"
+
                     android:layout_marginTop="9dp"
                     android:layout_marginEnd="-31dp"
-                    android:layout_toStartOf="@+id/textView3"
+                    android:layout_toStartOf="@+id/statsTitle"
                     android:text="PM 1" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/pm10Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView5"
-                    android:layout_alignBottom="@+id/startPoint"
+                    android:layout_alignTop="@+id/pm1Title"
+
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="0dp"
                     android:layout_marginBottom="0dp"
                     android:text="PM 10" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/pm25Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
 
-                    android:layout_alignTop="@+id/textView6"
-                    android:layout_alignEnd="@+id/textView3"
+                    android:layout_alignTop="@+id/pm10Title"
+                    android:layout_alignEnd="@+id/statsTitle"
                     android:layout_marginTop="0dp"
                     android:layout_marginBottom="0dp"
                     android:text="PM 2.5" />
@@ -116,7 +130,7 @@
                     android:layout_width="49dp"
                     android:layout_height="27dp"
 
-                    android:layout_below="@+id/textView6"
+                    android:layout_below="@+id/pm10Title"
                     android:layout_alignStart="@id/PM10RunProgressBar"
                     android:layout_alignTop="@id/PM10RunProgressBar"
                     android:layout_alignEnd="@id/PM10RunProgressBar"
@@ -134,7 +148,7 @@
                     android:id="@+id/pm25RouteValue"
                     android:layout_width="49dp"
                     android:layout_height="27dp"
-                    android:layout_below="@+id/textView7"
+                    android:layout_below="@+id/pm25Title"
 
                     android:layout_alignStart="@id/PM25RunProgressBar"
                     android:layout_alignTop="@id/PM25RunProgressBar"
@@ -157,63 +171,89 @@
                 <ProgressBar
                     android:id="@+id/PM1RunProgressBar"
 
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_below="@+id/textView5"
-                    android:layout_alignStart="@+id/textView5"
+                    android:layout_below="@+id/pm1Title"
+                    android:layout_alignStart="@+id/pm1Title"
                     android:layout_marginStart="-9dp"
                     android:layout_marginTop="10dp"
-                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:background="@drawable/background_circle"
                     android:max="100"
                     android:min="0"
+                    android:progressDrawable="@drawable/progress"
+                    android:rotation="180"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:progressDrawable="@drawable/progress"
-                    />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ProgressBar
                     android:id="@+id/PM10RunProgressBar"
 
+                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_below="@+id/textView6"
-                    android:layout_alignStart="@+id/textView6"
+                    android:layout_below="@+id/pm10Title"
+                    android:layout_alignStart="@+id/pm10Title"
                     android:layout_marginStart="-6dp"
                     android:layout_marginTop="10dp"
-                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                    android:background="@drawable/background_circle"
                     android:max="100"
+
                     android:min="0"
+                    android:progressDrawable="@drawable/progress"
+                    android:rotation="180"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:progressDrawable="@drawable/progress"
-                    />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ProgressBar
                     android:id="@+id/PM25RunProgressBar"
                     style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_below="@+id/textView7"
-                    android:layout_alignStart="@+id/textView7"
-                    android:layout_alignEnd="@+id/textView3"
+                    android:layout_below="@+id/pm25Title"
+                    android:layout_alignStart="@+id/pm25Title"
+                    android:layout_alignEnd="@+id/statsTitle"
                     android:layout_marginStart="-3dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="-3dp"
+                    android:background="@drawable/background_circle"
                     android:max="100"
                     android:min="0"
                     android:progressDrawable="@drawable/progress"
-
+                    android:rotation="180"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                   />
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/cleanestRouteImage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="5dp"
+                    app:srcCompat="@drawable/ic_leaf_solid" />
+
+                <TextView
+                    android:id="@+id/cleanestRouteText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="49dp"
+                    android:layout_marginBottom="1dp"
+                    android:text="This route alternative is the cleanest!" />
+
 
             </RelativeLayout>
+
+
         </RelativeLayout>
 
 
