--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -6,15 +6,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="219dp"
-        android:layout_marginBottom="364dp"
-        android:text="Staty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Today you saved your lungs from:"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/statsPM1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0 ug/m^3 of PM 1" />
+
+        <TextView
+            android:id="@+id/statsPM10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0 ug/m^3 of PM 10" />
+
+        <TextView
+            android:id="@+id/statsPM25"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0 ug/m^3 of PM 25" />
+
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
